tests/res/assignment/error_lvalue_class.say
type A {}
type B {}
A = B; // error: Cannot reassign 'A'; it names a type